--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ selectors = "0.22.0"
 cssparser = "0.27.2"
 tendril = "0.4.1"
 markup5ever = "0.10.0"
+
+[dev-dependencies]
+reqwest = { version = "0.10.4", features = ["blocking"] }
