--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ markup5ever = "0.10.0"
 
 [dev-dependencies]
 reqwest = { version = "0.10.4", features = ["blocking"] }
+regex = "1.3.6"
+lazy_static = "1.4.0"
