--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,10 @@ cssparser = "0.27.2"
 tendril = "0.4.1"
 markup5ever = "0.10.0"
 
+
 [dev-dependencies]
 reqwest = { version = "0.10.4", features = ["blocking"] }
 regex = "1.3.6"
 lazy_static = "1.4.0"
+readability = "0.1.5"
+url = "2.1.1"
