--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nipper"
-version = "0.1.0"
-description = "HTML parsing，querying and manipulation."
+version = "0.1.1"
+description = "HTML manipulation with CSS seletors"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/importcjj/nipper"
 documentation = "https://docs.rs/nipper/latest"
@@ -13,7 +13,6 @@ edition = "2018"
 
 [dependencies]
 html5ever = "0.25.1"
-markup5ever_rcdom = "0.1.0"
 selectors = "0.22.0"
 cssparser = "0.27.2"
 tendril = "0.4.1"
