--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ rust:
 
 
 script:
+  - |
+    if [[ "$TRAVIS_RUST_VERSION" == stable ]]
+    then
+      rustup component add rustfmt
+      cargo fmt --all -- --check
+    fi
   - RUST_BACKTRACE=1 cargo build --verbose --all
-  - RUST_BACKTRACE=1 cargo test --verbose --all 
-  
+  - RUST_BACKTRACE=1 cargo test --verbose --all
+
