--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nipper"
-version = "0.1.9"
+version = "0.1.10"
 description = "HTML manipulation with CSS seletors"
 license = "MIT/Apache-2.0"
 repository = "https://github.com/importcjj/nipper"
@@ -18,7 +18,7 @@ selectors = "0.23.0"
 cssparser = "0.28.1"
 tendril = "0.4.2"
 markup5ever = "0.11.0"
-
+matches = "0.1.4"
 
 [dev-dependencies]
 reqwest = { version = "0.11.3", features = ["blocking"] }
