--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ cssparser = "0.28.1"
 tendril = "0.4.2"
 markup5ever = "0.11.0"
 
+indexmap = "1.9.2"
+fxhash = "0.2.1"
+
 [dev-dependencies]
 reqwest = { version = "0.11.3", features = ["blocking"] }
 regex = "1.4.5"
